Changes by Vignesh

--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -6,5 +6,6 @@ block page-header
 block content
   ol
     li Awesome! Now add some routes, models, views and controllers.
+    li Hello World! Vignesh was here!
     li Change the content of&#32;
       code app/views/home/index.jade
